<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewBlok1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#a8cf45"
            android:clickable="true"
            android:padding="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textview_B3R1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/B3R1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff" />

             <EditText 
                 android:id="@+id/edittext_B3R1"
                 android:layout_width="100dp"
                 android:layout_height="40dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="#fff"
                 android:inputType="number"
                 android:background="#93bc2b"
                 android:layout_gravity="center_horizontal"/>
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#a8cf45"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" >

            <TextView
                android:id="@+id/textview_B3R2_Nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/B3R2_Nama"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff" />

            <EditText 
                 android:id="@+id/edittext_B3R2_Nama"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="#fff"
                 android:inputType="textCapWords"
                 android:background="#93bc2b"
                 android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#a8cf45"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textview_B3R3_Nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/B3R3_Nama"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff" />

            <EditText 
                 android:id="@+id/edittext_B3R3_Nama"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="#fff"
                 android:inputType="textCapWords"
                 android:background="#93bc2b"
                 android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >
        </LinearLayout>

        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_SaveBlok3"
               	android:background="@drawable/thome_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.17"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:text="@string/button_Save" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.68"
                android:orientation="vertical" >
            </LinearLayout>

            <Button
                android:id="@+id/button_CancelBlok3"
                android:background="@drawable/thome_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:text="@string/button_Cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>